freshrss/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: freshrss-svc
  namespace: freshrss
spec:
  selector:
    app: freshrss
  ports:
  - port: 80
    targetPort: 80
